[SAFRAN-1242] Stabilization